--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Next generation virtServer",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,20 @@
   "bugs": {
     "url": "https://github.com/shadidchowdhury/virtServerNG/issues"
   },
-  "homepage": "https://github.com/shadidchowdhury/virtServerNG#readme"
+  "homepage": "https://github.com/shadidchowdhury/virtServerNG#readme",
+
+  "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "babel-preset-stage-1": "^6.1.18",
+    "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
+  }
 }
