--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "reflux": "^0.1.13"
+    "reflux": "^0.1.13",
+    "superagent": "^1.8.3",
+    "superagent-jsonp": "0.0.6"
   }
 }
