--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "backbone-react-ui": "^0.1.8",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "reflux": "^0.1.13",
-    "superagent": "^1.8.3",
+    "superagent": "git@github.com:fiatjaf/superagent-cors.git#627d8b31cfdf7acbd78e3e5e54c1c0b8dd70f441",
     "superagent-jsonp": "0.0.6"
   }
 }
