--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "webpack": "^1.12.9",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "css-loader": "^0.21.0",
+    "file-loader": "^0.8.5",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
@@ -37,6 +41,7 @@
     "react-bootstrap": "^0.28.5",
     "react-dom": "^0.14.3",
     "reflux": "^0.1.13",
+
     "superagent": "git@github.com:fiatjaf/superagent-cors.git#627d8b31cfdf7acbd78e3e5e54c1c0b8dd70f441",
     "superagent-jsonp": "0.0.6"
   }
